updates to dependencies
and some minor build changes